Fixed css overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,3 @@
-.main-container{
-	height: calc(100vh - 70px - 36px);
-	user-select: none;
-	-ms-user-select: none;
-}
+
 
 
